--- a/src/main/resources/poissaolot.fxml
+++ b/src/main/resources/poissaolot.fxml
@@ -45,5 +45,10 @@
          </font>
       </Button>
       <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="885.0" layoutY="24.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="25.0" prefWidth="120.0" styleClass="logout-button" text="Kirjaudu ulos" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="14.0" />
+      <Button fx:id="SaveAttendanceButton" layoutX="526.0" layoutY="506.0" mnemonicParsing="false" onAction="#saveAttendance" text="Tallenna">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
