--- a/src/main/resources/studentInfo.fxml
+++ b/src/main/resources/studentInfo.fxml
@@ -11,7 +11,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@StudentInfoStyles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentInfoController">
+<?import javafx.scene.control.ListView?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@StudentInfoStyles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StudentInfoController">
    <children>
       <Text layoutX="417.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oppilasrekisteri" textAlignment="CENTER" textOrigin="CENTER">
          <font>
@@ -37,12 +38,14 @@
             <TableColumn fx:id="lastNameColumn" text="Sukunimi" />
          </columns>
       </TableView>
+      <ListView fx:id="opiskelijanKurssitList" layoutX="480.0" layoutY="170.0" prefHeight="303.0" prefWidth="459.0" styleClass="list-view" visible="false"/>
       <VBox layoutX="40.0" layoutY="170.0" prefHeight="200.0" prefWidth="356.0" styleClass="info-window">
          <children>
             <Label fx:id="nimiLabel" styleClass="info-label" text="Nimi:" />
             <Label fx:id="sahkopostiLabel" styleClass="info-label" text="Sähköposti:" />
             <Label fx:id="puhelinnumeroLabel" styleClass="info-label" text="Puhelinnumero:" />
             <Label fx:id="huoltajaLabel" styleClass="info-label" text="Huoltaja:" />
+            <Button mnemonicParsing="false" fx:id="naytaKurssitButton" prefHeight="26.0" prefWidth="149.0" text="Näytä oppilaan kurssit" onAction="#showCourses"/>
          </children>
       </VBox>
       <TextField fx:id="SearchTextField" layoutX="480.0" layoutY="110.0" prefHeight="22.0" prefWidth="200.0" promptText="Syötä oppilaan nimi" styleClass="search-text" />
