--- a/src/main/resources/kalenteri.fxml
+++ b/src/main/resources/kalenteri.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
@@ -13,6 +12,7 @@
                 <Font size="27.0" />
             </font>
         </Text>
+        <Line endX="913.0" layoutX="105.0" layoutY="73.0" startX="-105.0" stroke="gray" strokeWidth="2.0" />
         <Button fx:id="ProfiiliButton" layoutX="680.0" layoutY="14.0" onAction="#openProfiiliPage" prefHeight="25.0" prefWidth="90.0" styleClass="profiili-button" text="Profiili" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="14.0">
             <font>
                 <Font size="14.0" />
@@ -25,8 +25,8 @@
             </font>
         </Button>
         <VBox spacing="10" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="65.0">
-            <Line endX="913.0" layoutX="105.0" layoutY="73.0" startX="-105.0" />
-            <HBox alignment="CENTER" spacing="10" style="-fx-padding: 10;">
+
+            <HBox alignment="CENTER" spacing="10" style="-fx-padding: 20;">
                 <Button fx:id="PreviousWeekButton" onAction="#showPreviousWeek" prefHeight="25.0" prefWidth="150.0" styleClass="Week-Button" text="Edellinen viikko">
                     <font>
                         <Font size="14.0" />
